@@ -1,3 +1,7 @@
+* Dialer (ECCP): fixed bug that prevented the hold/schedulecall/transfercall
+  requirements from working after agent entered a pause while still connected
+  to a call.
+
 1.5-4.2 (SVN revision 2972)
 * Dialer (ECCP): extended "transfercall" request to work with calls connected
   to an agent that were not tracked by the dialer.
